updates to deploy to heroku

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-slot-booking-form></app-slot-booking-form>
+            <div class="center">
+            <app-slot-booking-form></app-slot-booking-form>
+        </div>
