--- a/src/app/slot-booking-form/slot-booking-form.component.html
+++ b/src/app/slot-booking-form/slot-booking-form.component.html
@@ -1,92 +1,113 @@
-<h1>Booking a trial class on NotchUp:</h1>
-<form #f="ngForm" (ngSubmit)="onSubmitTemplateBased()">
-     
-    <p>
-    <mat-form-field >
-        <mat-label>Parent's name</mat-label>
-        <input matInput placeholder="Ex. John Doe" [(ngModel)]="user.parentsName" name="parentName">
-    </mat-form-field>
-    </p>
-    
-    <p>
-    <mat-form-field >
-        <mat-label>Parent's Contact Number</mat-label>
-        <input matInput placeholder="Ex. 1234567890" [(ngModel)]="user.parentsContactNumber" name="contactNo">
-    </mat-form-field>
-    <ngx-intl-tel-input
-        [cssClass]="'custom'"
-        [preferredCountries]="[CountryISO.UnitedStates, CountryISO.UnitedKingdom]"
-        [enableAutoCountrySelect]="false"
-        [enablePlaceholder]="true"
-        [searchCountryFlag]="true"
-        [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]"
-        [selectFirstCountry]="false"
-        [selectedCountryISO]="CountryISO.India"
-        [maxLength]="15"
-        [tooltipField]="TooltipLabel.Name"
-        [phoneValidation]="true"
-        name="phone"
-        [(ngModel)]="user.parentsContactNumber"
-    ></ngx-intl-tel-input>
+<div id="topDiv" class="container-fluid">
+
+    <div class="row justify-content-center">
+        <div class="col-xs-12 col-md-12 ">
 
 
+            <h1>Book a FREE Trial Coding Session</h1>
 
-    </p>
-    
-    <p>
-        <mat-form-field >
-            <mat-label>Parent's Email ID</mat-label>
-            <input matInput placeholder="Ex. abcxyz@gmail.com" [(ngModel)]="user.parentsEmailid" name="email">
-        </mat-form-field>
-    </p>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-xs-6 col-md-6 ">
+            <form #f="ngForm" (ngSubmit)="onSubmitTemplateBased()">
 
-    <p>
-        <mat-form-field >
-            <mat-label>Child's Name</mat-label>
-            <input matInput placeholder="Ex. Andy Doe" [(ngModel)]="user.childsName" name="childName">
-        </mat-form-field>
-    </p>
+                <div class="row ">
+                    <div class="col-xs-12 col-md-12 ">
+                        <mat-form-field class="full-width">
+                            <mat-label>Parent's name</mat-label>
+                            <input matInput required placeholder="Ex. John Doe" [(ngModel)]="user.parentsName"
+                                name="parentName">
+                        </mat-form-field>
+                    </div>
+                </div>
 
-    <p>
-        <mat-form-field >
-            <mat-label>Child's Age</mat-label>
-            <input matInput placeholder="Ex. 10" [(ngModel)]="user.childsAge" name="age">
-        </mat-form-field>
-    </p>
-    
-    
-      <mat-form-field appearance="fill">
-        <mat-label>Course Name</mat-label>
-        <mat-select>
-          <mat-option *ngFor="let courseName of avaialbleCourseNames" [value]="courseName">
-            {{courseName}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
+                <div class="row ">
+                    <div class="col-xs-12 col-md-12 ">
+                        <ngx-intl-tel-input [cssClass]="'custom'"
+                            [preferredCountries]="[CountryISO.UnitedStates, CountryISO.UnitedKingdom]"
+                            [enableAutoCountrySelect]="false" [enablePlaceholder]="true" [searchCountryFlag]="true"
+                            [searchCountryField]="[SearchCountryField.Iso2, SearchCountryField.Name]"
+                            [selectFirstCountry]="false" [selectedCountryISO]="CountryISO.India" [maxLength]="15"
+                            [tooltipField]="TooltipLabel.Name" [phoneValidation]="true" name="phone"
+                            [(ngModel)]="user.parentsContactNumber"></ngx-intl-tel-input>
+                    </div>
+                </div>
+
+                <div class="row ">
+                    <div class="col-xs-12 col-md-12 ">
+                        <mat-form-field class="full-width">
+                            <mat-label>Parent's Email ID</mat-label>
+                            <input type="email" matInput required placeholder="Ex. abcxyz@gmail.com"
+                                [(ngModel)]="user.parentsEmailid" name="email">
+                        </mat-form-field>
+                    </div>
+                </div>
+
+                <div class="row ">
+                    <div class="col-xs-12 col-md-12 ">
+                        <mat-form-field class="full-width">
+                            <mat-label>Child's Name</mat-label>
+                            <input matInput required placeholder="Ex. Andy Doe" [(ngModel)]="user.childsName"
+                                name="childName">
+                        </mat-form-field>
+                    </div>
+                </div>
+
+                <div class="row ">
+                    <div class="col-xs-12 col-md-12 ">
+                        <mat-form-field class="full-width">
+                            <mat-label>Child's age</mat-label>
+                            <input matInput required type="number" min="5" max="17" placeholder="Ex. 10"
+                                [(ngModel)]="user.childsAge" name="age">
+                        </mat-form-field>
+                    </div>
+                </div>
+
+                <div class="row ">
+                    <div class="col-xs-12 col-md-12 ">
+                        <mat-form-field appearance="fill">
+                            <mat-label>Course name</mat-label>
+                            <mat-select (selectionChange)="onCourseSelect($event)">
+                                <mat-option *ngFor="let courseName of avaialbleCourseNames" [value]="courseName">
+                                    {{courseName}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                </div>
+
+                <div class="row ">
+                    <div class="col-xs-12 col-md-12 ">
+                        <mat-form-field appearance="fill">
+                            <mat-label>Choose a date</mat-label>
+                            <input matInput (dateChange)="onDateSelect($event)" [matDatepicker]="picker"
+                                [matDatepickerFilter]="dateFilter" required disabled [(ngModel)]="user.suitableDate">
+                            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                            <mat-datepicker #picker disabled="false"></mat-datepicker>
+                        </mat-form-field>
+                    </div>
+                </div>
+
+                <div class="row ">
+                    <div class="col-xs-12 col-md-12 ">
+                        <mat-form-field appearance="fill">
+                            <mat-label>Available slots</mat-label>
+                            <mat-select>
+                                <mat-option *ngFor="let availableSlot of filteredTimeSlots"
+                                    [value]="availableSlot.slot">
+                                    {{availableSlot.slot | date:'hh:mm a'}} to
+                                    {{ availableSlot.endTime | date:'hh:mm a'}}
+                                </mat-option>
+                            </mat-select>
+                        </mat-form-field>
+                    </div>
+                </div>
 
 
-    <p>
-        <mat-form-field >
-            <mat-label>Suitable Date for a trial class</mat-label>
-            <input matInput placeholder="Ex. 20/09/2020" [(ngModel)]="user.suitableDate" name="courseDate">
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-            <mat-label>Choose a date</mat-label>
-            <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-          </mat-form-field>
-        
-    </p>
+                <button type="submit" [disabled]="!f.valid" mat-flat-button color="primary">Submit</button>
 
-    <p>
-        <mat-form-field >
-            <mat-label>Suitable Time Slot for the trial class</mat-label>
-            <input matInput placeholder="Ex. 05:30 PM" [(ngModel)]="user.suitableTimeSlot" name="courseSlot">
-        </mat-form-field>
-    </p>
-    
-    <p>
-        <button type="submit" [disabled]="!f.valid">Submit</button>
-    </p>
-</form>
+            </form>
+        </div>
+    </div>
+</div>
