--- a/src/app/slot-booking-form/slot-booking-form.component.css
+++ b/src/app/slot-booking-form/slot-booking-form.component.css
@@ -1,5 +1,15 @@
 .full-width {
     width: 100%;
-  }
+}
 
-  
+.margin-top-20 {
+    margin-top: 20px;
+}
+
+.top-border {
+    border-top: 1px solid black;
+}
+
+.blue-snackbar {
+    background: #2196F3;
+}
