--- a/src/app/slot-booking-form/slot-booking-form.component.css
+++ b/src/app/slot-booking-form/slot-booking-form.component.css
@@ -2,14 +2,17 @@
     width: 100%;
 }
 
-.margin-top-20 {
-    margin-top: 20px;
+.input-card {
+    background-color: rgb(245, 238, 238);
+    padding: 15px;
+    margin: 15px;
 }
 
-.top-border {
-    border-top: 1px solid black;
+h1 {
+    color: white;
 }
 
-.blue-snackbar {
-    background: #2196F3;
+.custom-tel-input {
+    background-color: rgb(245, 238, 238);
+    border: none !important;
 }
