--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.blue-snackbar {
+    background: #9ecef5;
+    color: black;
+}
+
+.custom-tel-input {
+    background-color: rgb(245, 238, 238);
+    border: none;
+    border-bottom: 1px solid black;
+}
+
+.margin-bottom-15 {
+    margin-bottom: 15px;
+}
